# fastapi-korzinka

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
fastapi-application/: .env  .env.template  alembic.ini  main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_07_04_1351-952349c71e0f_create_contacts_categories_tables.py  2024_07_06_1533-99137085b101_create_table.py  2024_07_06_1700-1c56b593abd6_create_tables.py
fastapi-application/api/: __init__.py  auth_api.py  categories_api.py  contacts_api.py
fastapi-application/api/api_v1/: __init__.py  categories.py
fastapi-application/auth/: utils_jwt.py
fastapi-application/certs/: jwt_private.pem  jwt_public.pem
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  base.py  categories.py  contacts.py  db_helper.py  tables.py
fastapi-application/core/schemas/: category.py  category_schemas.py  contact_schemas.py  user_schemas.py
fastapi-application/crud/: category.py  category_crud.py  contact_crud.py
